@@ -230,7 +230,8 @@ static unsigned int JPEGMessageHandler(j_common_ptr jpeg_info,int msg_level)
       if (image->logging)
 	{
 	  (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-				"[%s] JPEG Warning: \"%s\" (code=%d, parms=0x%02x,0x%02x,"
+				"[%s] JPEG Warning: \"%s\" (code=%d, "
+                                "parms=0x%02x,0x%02x,"
 				"0x%02x,0x%02x,0x%02x,0x%02x,0x%02x,0x%02x)",
 				image->filename,message,err->msg_code,
 				err->msg_parm.i[0], err->msg_parm.i[1],
@@ -251,7 +252,8 @@ static unsigned int JPEGMessageHandler(j_common_ptr jpeg_info,int msg_level)
 	{
 	  (err->format_message)(jpeg_info,message);
 	  (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-				"[%s] JPEG Trace: \"%s\"",image->filename,message);
+				"[%s] JPEG Trace: \"%s\"",image->filename,
+                                message);
 	}
     }
   return(True);
@@ -325,7 +327,8 @@ static void JPEGErrorHandler(j_common_ptr jpeg_info)
   if (image->logging)
     {
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-			    "[%s] JPEG Error: \"%s\" (code=%d, parms=0x%02x,0x%02x,"
+			    "[%s] JPEG Error: \"%s\" (code=%d, "
+                            "parms=0x%02x,0x%02x,"
 			    "0x%02x,0x%02x,0x%02x,0x%02x,0x%02x,0x%02x)",
 			    image->filename,message,err->msg_code,
 			    err->msg_parm.i[0], err->msg_parm.i[1],
@@ -334,9 +337,11 @@ static void JPEGErrorHandler(j_common_ptr jpeg_info)
 			    err->msg_parm.i[6], err->msg_parm.i[7]);
     }
   if (error_manager->completed)
-    ThrowException2(&image->exception,CoderWarning,(char *) message,image->filename);
+    ThrowException2(&image->exception,CoderWarning,(char *) message,
+                    image->filename);
   else
-    ThrowException2(&image->exception,CoderError,(char *) message,image->filename);
+    ThrowException2(&image->exception,CoderError,(char *) message,
+                    image->filename);
   longjmp(error_manager->error_recovery,1);
 }
 
@@ -469,7 +474,8 @@ static boolean ReadGenericProfile(j_decompress_ptr jpeg_info)
   /*
     Store profile in Image.
   */
-  status=AppendImageProfile(image,profile_name,profile+header_length,length-header_length);
+  status=AppendImageProfile(image,profile_name,profile+header_length,
+                            length-header_length);
   MagickFreeMemory(profile);
 
   (void) LogMagickEvent(CoderEvent,GetMagickModule(),"Profile: %s, %lu bytes",
@@ -1623,28 +1629,54 @@ static void TerminateDestination(j_compress_ptr cinfo)
     }
 }
 
-static void WriteICCProfile(j_compress_ptr jpeg_info,Image *image)
+/*
+  Output generic APPN profile
+*/
+static void WriteAPPNProfile(j_compress_ptr jpeg_info,
+                              const unsigned char *profile,
+                              const size_t profile_length,
+                              const char * profile_name)
+{
+  size_t
+    j;
+  
+  int
+    marker_id;
+  
+  marker_id=JPEG_APP0+(int) MagickAtoL(profile_name+3);
+  for (j=0; j < profile_length; j+=65533L)
+    jpeg_write_marker(jpeg_info,marker_id,
+                      profile+j,(int)
+                      Min(profile_length-j,65533L));
+}
+
+/*
+  Output EXIF profile
+*/
+static void WriteEXIFProfile(j_compress_ptr jpeg_info,
+                              const unsigned char *profile,
+                              const size_t profile_length)
+{
+  size_t
+    j;
+
+  for (j=0; j < profile_length; j+=65533L)
+    jpeg_write_marker(jpeg_info,JPEG_APP0+1,
+                      profile+j,(int)
+                      Min(profile_length-j,65533L));
+}
+
+/*
+  Output ICC color profile as a APP marker.
+*/
+static void WriteICCProfile(j_compress_ptr jpeg_info,
+                            const unsigned char *color_profile,
+                            const size_t profile_length)
 {
   register long
     i,
     j;
 
-  const unsigned char
-    *color_profile;
-
-  size_t
-    profile_length;
-
-  /*
-    Retrieve color profile.
-  */
-  color_profile=GetImageProfile(image,"ICM",&profile_length);
-  if (color_profile == ( const unsigned char *) NULL)
-    return;
-
-  /*
-    Save color profile as a APP marker.
-  */
   for (i=0; i < (long) profile_length; i+=65519)
   {
     unsigned char
@@ -1666,12 +1698,14 @@ static void WriteICCProfile(j_compress_ptr jpeg_info,Image *image)
     jpeg_write_marker(jpeg_info,ICC_MARKER,profile,(unsigned int) length+14);
     MagickFreeMemory(profile);
   }
-  if (image->logging)
-    (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-			  "ICC profile: %ld bytes",(long) profile_length);
 }
 
-static void WriteIPTCProfile(j_compress_ptr jpeg_info,Image *image)
+/*
+  Output binary Photoshop resource data using an APP marker.
+*/
+static void WriteIPTCProfile(j_compress_ptr jpeg_info,
+                            const unsigned char *iptc_profile,
+                            const size_t profile_length)
 {
   register long
     i;
@@ -1680,22 +1714,6 @@ static void WriteIPTCProfile(j_compress_ptr jpeg_info,Image *image)
     roundup,
     tag_length;
 
-  const unsigned char
-    *iptc_profile;
-
-  size_t
-    profile_length;
-
-  /*
-    Retrieve IPTC profile from Image.
-  */
-  iptc_profile=GetImageProfile(image,"IPTC",&profile_length);
-  if (iptc_profile == ( const unsigned char *) NULL)
-    return;
-
-  /*
-    Save binary Photoshop resource data using an APP marker.
-  */
 #ifdef GET_ONLY_IPTC_DATA
   tag_length=26;
 #else
@@ -1730,47 +1748,27 @@ static void WriteIPTCProfile(j_compress_ptr jpeg_info,Image *image)
       (length+roundup+tag_length));
     MagickFreeMemory(profile);
   }
-
-  if (image->logging)
-    (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-			  "IPTC profile: %ld bytes",(long) profile_length);
 }
 
-static void WriteXMPProfile(j_compress_ptr jpeg_info,Image *image)
+/*
+  Output Adobe XMP XML profile.
+*/
+static void WriteXMPProfile(j_compress_ptr jpeg_info,
+                            const unsigned char *profile,
+                            const size_t profile_length)
 {
-  static const char
-    *profile_id="XMP";
-
-  const unsigned char
-    *profile;
-
   size_t
     remaining,
     count,
     index,
     header_length,
     marker_length,
-    profile_length = 0,
     total_length;
 
-  /*
-    Retrieve profile.
-  */
-  profile=GetImageProfile(image,profile_id,&profile_length);
-  if ((profile == ( const unsigned char *) NULL) ||
-      (profile_length == 0))
-    return;
-
-  /*
-    Compute sizes of things.
-  */
   header_length=strlen(xmp_std_header)+1; /* Include terminating null */
   total_length=header_length+profile_length;
   remaining=total_length;
 
-  /*
-    Output header
-  */
   marker_length=Min(remaining,JPEG_MARKER_MAX_SIZE);
   jpeg_write_m_header(jpeg_info,XML_MARKER,marker_length);
   count=marker_length;
@@ -1783,9 +1781,6 @@ static void WriteXMPProfile(j_compress_ptr jpeg_info,Image *image)
       }
   }
 
-  /*
-    Output profile data
-  */
   for (index=0; remaining > 0; --remaining)
     {
       if (count == 0)
@@ -1798,10 +1793,72 @@ static void WriteXMPProfile(j_compress_ptr jpeg_info,Image *image)
       index++;
       count--;
     }
+}
 
-  if (image->logging)
-    (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-			  "%s profile: %ld bytes",profile_id, (long) profile_length);
+/*
+  Output profiles to JPEG stream.
+*/
+static void WriteProfiles(j_compress_ptr jpeg_info,Image *image)
+{
+  const char
+    *profile_name;
+
+  const unsigned char *
+    profile;
+
+  ImageProfileIterator
+    profile_iterator;
+    
+  size_t
+    profile_length=0;
+
+  profile_iterator=AllocateImageProfileIterator(image);
+  while(NextImageProfile(profile_iterator,&profile_name,&profile,
+                         &profile_length) != MagickFail)
+    {
+      if (LocaleNCompare(profile_name,"APP",3) == 0)
+        {
+          WriteAPPNProfile(jpeg_info, profile, profile_length, profile_name);
+        }
+      else if (LocaleCompare(profile_name,"EXIF") == 0)
+        {
+          WriteEXIFProfile(jpeg_info, profile, profile_length);
+        }
+      else if ((LocaleCompare(profile_name,"ICM") == 0) ||
+               (LocaleCompare(profile_name,"ICC") == 0))
+        {
+          WriteICCProfile(jpeg_info, profile, profile_length);
+        }
+      else if ((LocaleCompare(profile_name,"IPTC") == 0) ||
+               (LocaleCompare(profile_name,"8BIM") == 0))
+        {
+          WriteIPTCProfile(jpeg_info, profile, profile_length);
+        }
+      else if (LocaleCompare(profile_name,"XMP") == 0)
+        {
+          WriteXMPProfile(jpeg_info, profile, profile_length);
+        }
+      else
+        {
+          /*
+            Skip unknown profile type
+          */
+          if (image->logging)
+            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                  "Skipped Profile: %s, %"
+                                  MAGICK_SIZE_T_F "u bytes",
+                                  profile_name,
+                                  (MAGICK_SIZE_T) profile_length);
+          continue;
+        }
+      
+      if (image->logging)
+        (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                              "Wrote Profile: %s, %"
+                              MAGICK_SIZE_T_F "u bytes",profile_name,
+                              (MAGICK_SIZE_T) profile_length);
+    }
+  DeallocateImageProfileIterator(profile_iterator);
 }
 
 static void JPEGDestinationManager(j_compress_ptr cinfo,Image * image)
@@ -2149,7 +2206,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
       */
       huffman_memory=(magick_int64_t) jpeg_info.input_components*
         image->columns*image->rows*sizeof(JSAMPLE);
-      jpeg_info.optimize_coding=AcquireMagickResource(MemoryResource,huffman_memory);
+      jpeg_info.optimize_coding=AcquireMagickResource(MemoryResource,
+                                                      huffman_memory);
     }
   if (!jpeg_info.optimize_coding)
     huffman_memory=0;
@@ -2181,7 +2239,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
     {
 #if defined(C_LOSSLESS_SUPPORTED)
       if (quality < 100)
-        ThrowException(&image->exception,CoderWarning,LosslessToLossyJPEGConversion,(char *) NULL);
+        ThrowException(&image->exception,CoderWarning,
+                       LosslessToLossyJPEGConversion,(char *) NULL);
       else
         {
           int
@@ -2256,7 +2315,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
     }
 
   if (image->logging)
-    (void) LogMagickEvent(CoderEvent,GetMagickModule(),"Starting JPEG compression");
+    (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                          "Starting JPEG compression");
   jpeg_start_compress(&jpeg_info,True);
   if (image->logging)
     {
@@ -2310,7 +2370,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
           (void) LogMagickEvent(CoderEvent,GetMagickModule(),
 				"Colorspace: GRAY");
           (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-				"Sampling factors: %dx%d",jpeg_info.comp_info[0].h_samp_factor,
+				"Sampling factors: %dx%d",
+                                jpeg_info.comp_info[0].h_samp_factor,
 				jpeg_info.comp_info[0].v_samp_factor);
 	}
       else if (IsRGBCompatibleColorspace(image->colorspace))
@@ -2367,46 +2428,12 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
     for (i=0; i < (long) strlen(attribute->value); i+=65533L)
       jpeg_write_marker(&jpeg_info,JPEG_COM,(unsigned char *) attribute->value+
         i,(int) Min(strlen(attribute->value+i),65533L));
+#if 0
   WriteICCProfile(&jpeg_info,image);
   WriteIPTCProfile(&jpeg_info,image);
   WriteXMPProfile(&jpeg_info,image);
-  {
-    const char
-      *profile_name;
-    
-    size_t
-      profile_length;
-    
-    const unsigned char *
-      profile_info;
-    
-    ImageProfileIterator
-      profile_iterator;
-
-    profile_iterator=AllocateImageProfileIterator(image);
-    while(NextImageProfile(profile_iterator,&profile_name,&profile_info,
-                           &profile_length) != MagickFail)
-      {
-        register long
-          j;
-
-        if (LocaleNCompare(profile_name,"APP",3) != 0 &&
-            LocaleNCompare(profile_name,"EXIF",4) != 0)
-          continue;
-        x=1;
-        if (LocaleNCompare(profile_name,"APP",3) == 0)
-          x=MagickAtoL(profile_name+3);
-        if (image->logging)
-          (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-                                "Profile: %s, %lu bytes",profile_name,
-                                (unsigned long) profile_length);
-        for (j=0; j < (long) profile_length; j+=65533L)
-          jpeg_write_marker(&jpeg_info,JPEG_APP0+(int) x,
-                            profile_info+j,(int)
-                            Min(profile_length-j,65533L));
-      }
-    DeallocateImageProfileIterator(profile_iterator);
-  }
+#endif
+  WriteProfiles(&jpeg_info,image);
   /*
     Convert MIFF to JPEG raster pixels.
   */
@@ -2429,7 +2456,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
 				  jpeg_info.data_precision);
           for (y=0; y < (long) image->rows; y++)
             {
-              p=AcquireImagePixels(image,0,y,image->columns,1,&image->exception);
+              p=AcquireImagePixels(image,0,y,image->columns,1,
+                                   &image->exception);
               if (p == (const PixelPacket *) NULL)
                 break;
               q=jpeg_pixels;
@@ -2437,7 +2465,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
                 {
                   for (x=0; x < (long) image->columns; x++)
                     {
-                      *q++=(JSAMPLE) (ScaleQuantumToShort(GetGraySample(p))/16U);
+                      *q++=(JSAMPLE) (ScaleQuantumToShort(GetGraySample(p))/
+                                      16U);
                       p++;
                     }
                 }
@@ -2445,7 +2474,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
                 {
                   for (x=0; x < (long) image->columns; x++)
                     {
-                      *q++=(JSAMPLE) (ScaleQuantumToShort(PixelIntensityToQuantum(p))/16U);
+                      *q++=(JSAMPLE)
+                        (ScaleQuantumToShort(PixelIntensityToQuantum(p))/16U);
                       p++;
                     }
                 }
@@ -2463,11 +2493,13 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
           {
 	    if (image->logging)
 	      (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-				    "Writing %d bit JCS_RGB or JCS_YCbCr samples",
+				    "Writing %d bit JCS_RGB or "
+                                    "JCS_YCbCr samples",
 				    jpeg_info.data_precision);
             for (y=0; y < (long) image->rows; y++)
               {
-                p=AcquireImagePixels(image,0,y,image->columns,1,&image->exception);
+                p=AcquireImagePixels(image,0,y,image->columns,1,
+                                     &image->exception);
                 if (p == (const PixelPacket *) NULL)
                   break;
                 q=jpeg_pixels;
@@ -2494,7 +2526,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
 				    jpeg_info.data_precision);
             for (y=0; y < (long) image->rows; y++)
               {
-                p=AcquireImagePixels(image,0,y,image->columns,1,&image->exception);
+                p=AcquireImagePixels(image,0,y,image->columns,1,
+                                     &image->exception);
                 if (p == (const PixelPacket *) NULL)
                   break;
                 q=jpeg_pixels;
@@ -2543,7 +2576,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
               {
                 for (x=0; x < (long) image->columns; x++)
                   {
-                    *q++=(JSAMPLE) ScaleQuantumToChar(PixelIntensityToQuantum(p));
+                    *q++=(JSAMPLE)
+                      ScaleQuantumToChar(PixelIntensityToQuantum(p));
                     p++;
                   }
               }
@@ -2565,7 +2599,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
 				  jpeg_info.data_precision);
           for (y=0; y < (long) image->rows; y++)
             {
-              p=AcquireImagePixels(image,0,y,image->columns,1,&image->exception);
+              p=AcquireImagePixels(image,0,y,image->columns,1,
+                                   &image->exception);
               if (p == (const PixelPacket *) NULL)
                 break;
               q=jpeg_pixels;
@@ -2592,7 +2627,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
 				  jpeg_info.data_precision);
           for (y=0; y < (long) image->rows; y++)
             {
-              p=AcquireImagePixels(image,0,y,image->columns,1,&image->exception);
+              p=AcquireImagePixels(image,0,y,image->columns,1,
+                                   &image->exception);
               if (p == (const PixelPacket *) NULL)
                 break;
               q=jpeg_pixels;
@@ -2616,7 +2652,8 @@ static MagickPassFail WriteJPEGImage(const ImageInfo *image_info,Image *image)
             }
         }
   if (image->logging)
-    (void) LogMagickEvent(CoderEvent,GetMagickModule(),"Finishing JPEG compression");
+    (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                          "Finishing JPEG compression");
   jpeg_finish_compress(&jpeg_info);
   /*
     Free memory.
