@@ -39,7 +39,8 @@
 <blockquote>
 <ul class="simple">
 <li>coders/jpeg.c (WriteXMPProfile): Add support for writing 'XMP'
-profile in JPEG.</li>
+profile in JPEG.
+(WriteJPEGImage): Restructure/tidy JPEG profile writing code.</li>
 </ul>
 </blockquote>
 <p>2013-04-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
